@@ -1,5 +1,14 @@
 2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/session.c (info_search_in_node_internal, info_search_internal):
+	Replace calls to set_remembered_pagetop_and_point,
+	window_set_node_of_window and remember_window_and_node with call to
+	info_set_node_of_window.
+	(set_remembered_pagetop_and_point): Merged into
+	info_set_node_of_window.
+
+2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/footnotes.c (info_get_or_remove_footnotes): Call
 	info_set_node_of_window instead of window_set_node_of_window.
 	* info/session.c (remember_window_and_node): Declared static.
